--- a/src/index.css
+++ b/src/index.css
@@ -1880,3 +1880,9 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+
+.button-contact{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
