--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,6 @@ main {
 }
 
 .avatar-box {
-  background: var(--bg-gradient-onyx);
   border-radius: 20px;
 }
 
@@ -588,7 +587,6 @@ main {
   top: 0;
   left: 0;
   transform: translate(15px, -25px);
-  background: var(--bg-gradient-onyx);
   border-radius: 14px;
   box-shadow: var(--shadow-1);
 }
@@ -1168,8 +1166,6 @@ main {
 
 textarea.form-input {
   min-height: 100px;
-  height: 120px;
-  max-height: 200px;
   resize: vertical;
   margin-bottom: 25px;
 }
@@ -1178,7 +1174,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-input:focus:invalid { border-color: var(--bittersweet-shimmer); }
 
-.form-btn {
+.form-btn , .call-btn {
   position: relative;
   width: 100%;
   background: var(--border-gradient-onyx);
@@ -1196,7 +1192,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   transition: var(--transition-1);
 }
 
-.form-btn::before {
+.form-btn::before , .call-btn::before{
   content: "";
   position: absolute;
   inset: 1px;
@@ -1206,20 +1202,29 @@ textarea.form-input::-webkit-resizer { display: none; }
   transition: var(--transition-1);
 }
 
-.form-btn ion-icon { font-size: 16px; }
+.form-btn ion-icon , .call-btn ion-icon{ font-size: 16px; }
 
-.form-btn:hover { background: var(--bg-gradient-yellow-1); }
+.form-btn:hover , .call-btn:hover { background: var(--bg-gradient-yellow-1); }
 
-.form-btn:hover::before { background: var(--bg-gradient-yellow-2); }
+.form-btn:hover::before , .call-btn:hover::before { background: var(--bg-gradient-yellow-2); }
 
-.form-btn:disabled {
+.form-btn:disabled , .call-btn:disabled {
   opacity: 0.7;
   cursor: not-allowed;
 }
 
-.form-btn:disabled:hover { background: var(--border-gradient-onyx); }
+.form-btn:disabled:hover , .call-btn:disabled:hover { background: var(--border-gradient-onyx); }
 
-.form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
+.form-btn:disabled:hover::before , .call-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
+
+.button-contact {
+  display: inline-flex;
+  position: relative;
+  right: -60%;
+}
+.button-contact button, .button-contact a{
+  margin-left:10px ;
+}
 
 
 
@@ -1427,7 +1432,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     border-radius: 20px;
   }
 
-  .testimonials-avatar-box img { width: 80px; }
+  .testimonials-avatar-box img { width: 80px; border-radius: 50%; }
 
   .testimonials-item-title {
     margin-bottom: 10px;
@@ -1532,12 +1537,12 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   textarea.form-input { margin-bottom: 30px; }
 
-  .form-btn {
+  .form-btn, .call-btn {
     --fs-6: 16px;
     padding: 16px 20px;
   }
 
-  .form-btn ion-icon { font-size: 18px; }
+  .form-btn ion-icon, .call-btn ion-icon { font-size: 18px; }
 
 }
 
@@ -1634,7 +1639,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .input-wrapper { grid-template-columns: 1fr 1fr; }
 
-  .form-btn {
+  .form-btn, .call-btn {
     width: max-content;
     margin-left: auto;
   }
@@ -1881,8 +1886,16 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 }
 
-.button-contact{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+@media (max-width: 1250px) {
+
+  .button-contact {
+    display: block;
+    position: relative;
+    right: auto!important;
+  }
+  .button-contact button{
+    margin-top:5px ;
+  }
+  
+
 }
